--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,15 @@
 spring.datasource.url=jdbc:mariadb://localhost:3306/tailerbox
 spring.datasource.username=root
 spring.datasource.password=root
+
+# Spring Data Rest Properties
+spring.data.rest.base-path=/api
+spring.data.rest.default-media-type=application/json
+spring.data.rest.default-page-size=10
+spring.data.rest.max-page-size=50
+spring.data.rest.detection-strategy=default
+spring.data.rest.limit-param-name=size
+spring.data.rest.page-param-name=page
+spring.data.rest.sort-param-name=sort
+spring.data.rest.return-body-on-create=true
+spring.data.rest.return-body-on-update=true
