Data Rest Basic

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,6 @@
+# Logging Level
+#logging.level.org.springframework=debug
+#logging.level.org.springframework.web=debug
 
 # DB Connection
 spring.datasource.url=jdbc:mariadb://localhost:3306/tailerbox
@@ -15,3 +18,12 @@ spring.data.rest.page-param-name=page
 spring.data.rest.sort-param-name=sort
 spring.data.rest.return-body-on-create=true
 spring.data.rest.return-body-on-update=true
+
+
+# JPA properties
+#spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.open-in-view=true
+
+#
+spring.jackson.property-naming-strategy=SNAKE_CASE
