--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,18 @@
 spring:
-
   datasource:
     url: jdbc:mariadb://localhost:3306/tailerbox
     username: root
     password: root
+  jpa:
+    hibernate:
+      ## JPA 설정
+      # create : SessionFactory가 올라갈 때 테이블을 지우고 새로 만듬. (sql문을 별도로 만들어서 데이터를 넣는 용도로도 사용가능하다.)
+      # create-drop : create와 동일하지만, SessionFactory가 내려가면 해당 테이블을 drop시킨다.
+      # update : SessionFactory가 올라갈 때 Object를 검사하여 테이블을 alter 시킨다. 데이터는 유지됨.
+      # validate : update처럼 Object를 검사하지만, 스키마는 아무것도 건드리지 않고, Object와 스키마의 정보가 다르다면 에러를 발생시킨다.
+      # none : 사용하지 않음
+      ddl-auto: validate
+    show-sql: true
+logging:
+  level:
+    root: info
