--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,8 +1,8 @@
 spring:
   datasource:
     url: jdbc:mariadb://localhost:3306/tailerbox
-    username: root
-    password: root
+    username: tailerbox
+    password: secret
   jpa:
     hibernate:
       ## JPA 설정
@@ -11,7 +11,7 @@ spring:
       # update : SessionFactory가 올라갈 때 Object를 검사하여 테이블을 alter 시킨다. 데이터는 유지됨.
       # validate : update처럼 Object를 검사하지만, 스키마는 아무것도 건드리지 않고, Object와 스키마의 정보가 다르다면 에러를 발생시킨다.
       # none : 사용하지 않음
-      ddl-auto: validate
+      ddl-auto: update
     show-sql: true
 logging:
   level:
