--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,3 +4,13 @@ spring:
     url: jdbc:mariadb://localhost:3306/tailerbox
     username: root
     password: root
+    dia
+
+  jpa:
+    hibernate:
+      ddl-auto: validate
+#      naming:
+#        physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+#        implicit-strategy: org.hibernate.boot.model.naming.ImplicitNamingStrategyComponentPathImpl
+    show-sql: true
+#    database-platform: org.hibernate.dialect.MariaDB103Dialect
