--- a/build.gradle
+++ b/build.gradle
@@ -24,13 +24,15 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-rest:2.5.6'
     implementation 'org.springframework.boot:spring-boot-starter-hateoas:2.5.6'
     implementation 'org.springframework.boot:spring-boot-starter-web:2.5.6'
+    implementation 'org.springframework.boot:spring-boot-starter-validation:2.5.6'
     implementation 'org.hibernate.validator:hibernate-validator:7.0.1.Final'
-    compileOnly 'org.projectlombok:lombok:1.18.22'
     developmentOnly 'org.springframework.boot:spring-boot-devtools:2.5.6'
+    implementation 'org.jetbrains:annotations:22.0.0'
+    compileOnly 'org.projectlombok:lombok:1.18.22'
     runtimeOnly 'org.mariadb.jdbc:mariadb-java-client:2.7.3'
     annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor:2.5.6'
     annotationProcessor 'org.projectlombok:lombok:1.18.22'
-    providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat:2.5.6'
+    providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat:2.6.1'
     testImplementation 'org.springframework.boot:spring-boot-starter-test:2.5.6'
 
 }
