--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,5 +2,11 @@ spring:
 
   datasource:
     url: jdbc:mariadb://localhost:3306/tailerbox
-    username: root
-    password: root
+    username: cwlee02
+    password: secret
+
+#  data:
+#    web:
+#      pageable:
+#        one-indexed-parameters: on
+#        default-page-size: 20
