--- a/build.gradle
+++ b/build.gradle
@@ -20,20 +20,19 @@ repositories {
 }
 
 dependencies {
-    implementation 'org.springframework.boot:spring-boot-starter-data-jpa:2.5.6'
-    implementation 'org.springframework.boot:spring-boot-starter-data-rest:2.5.6'
-    implementation 'org.springframework.boot:spring-boot-starter-hateoas:2.5.6'
-    implementation 'org.springframework.boot:spring-boot-starter-web:2.5.6'
-    implementation 'org.springframework.boot:spring-boot-starter-validation:2.5.6'
-    implementation 'org.hibernate.validator:hibernate-validator:7.0.1.Final'
-    developmentOnly 'org.springframework.boot:spring-boot-devtools:2.5.6'
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+//    implementation 'org.springframework.boot:spring-boot-starter-data-rest'
+    implementation 'org.springframework.boot:spring-boot-starter-hateoas'
+    implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.boot:spring-boot-starter-validation'
+    developmentOnly 'org.springframework.boot:spring-boot-devtools'
     implementation 'org.jetbrains:annotations:22.0.0'
     compileOnly 'org.projectlombok:lombok:1.18.22'
     runtimeOnly 'org.mariadb.jdbc:mariadb-java-client:2.7.3'
-    annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor:2.5.6'
+    annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
     annotationProcessor 'org.projectlombok:lombok:1.18.22'
-    providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat:2.6.1'
-    testImplementation 'org.springframework.boot:spring-boot-starter-test:2.5.6'
+    providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
 }
 
