--- a/build.gradle
+++ b/build.gradle
@@ -21,10 +21,11 @@ repositories {
 
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-//    implementation 'org.springframework.boot:spring-boot-starter-data-rest'
     implementation 'org.springframework.boot:spring-boot-starter-hateoas'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
+    implementation 'com.github.javafaker:javafaker:1.0.2'
+    implementation 'com.google.code.findbugs:jsr305:3.0.2'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     implementation 'org.jetbrains:annotations:22.0.0'
     compileOnly 'org.projectlombok:lombok:1.18.22'
@@ -33,7 +34,6 @@ dependencies {
     annotationProcessor 'org.projectlombok:lombok:1.18.22'
     providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
-
 }
 
 test {
