--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,20 @@
 spring:
+  application:
+    name: tailerbox
+  profiles:
+    active: local
 
-  datasource:
-    url: jdbc:mariadb://localhost:3306/tailerbox
-    username: root
-    password: root
+mybatis:
+  config-location: classpath:mybatis/mybatis-config.xml
+  mapper-locations: classpath:mybatis/mapper/**/*-mapper.xml
+
+pagehelper:
+  auto-dialect: true
+  helper-dialect: mariadb
+  page-size-zero: false
+  reasonable: true
+  offset-as-page-num: false
+  row-bounds-with-count: false
+  auto-runtime-dialect: false
+  close-conn: true
+  default-count: true
