--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,6 +7,8 @@ spring:
 mybatis:
   config-location: classpath:mybatis/mybatis-config.xml
   mapper-locations: classpath:mybatis/mapper/**/*-mapper.xml
+#  configuration:
+#    map-underscore-to-camel-case: true
 
 pagehelper:
   auto-dialect: true
